src/style.css
/* Global Language Switcher Buttons Styles */
.lang-switcher-btns {
    display: flex;
    gap: 10px;
}
.lang-btn {
    background: #222249;
    color: #fff;
    border: none;
    border-radius: 8px;
    padding: 8px 20px;
    font-weight: 600;
    cursor: pointer;
    font-size: 1em;
    transition: background 0.2s, color 0.2s, font-size 0.2s;
    outline: none;
}
.lang-btn.selected {
    background: transparent;
    color: #ff1d1d;
    font-size: 1.25em;
    box-shadow: none;
}
.lang-btn:hover {
    background: transparent;
    color: #ff1d1d;
}
@media (max-width: 991px) {
    .home2 .lang-switcher-btns {
        display: none !important;
    }
}
*{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: 'Poppins', sans-serif;
}


html{
    scroll-behavior: smooth;
}
 .new_first_blog, .service_section, .web_programming, .footere{
    overflow-x: hidden;
    overflow: hidden;
    width: 100%;
}

.service_section {
    width: 100%;
    position: relative;
    /* Remove overflow:hidden to allow content to show */
/* } */ 
}


::selection{
    background-color: #ff1d1d;
    color: white;
}



/* navbar  start */


a{
    text-decoration: none;
    position: relative;
}

li{
    list-style: none;
}

/*
div{
  padding-right: 0;
} */


/* BURGER MENU */
.custom-toggler .navbar-toggler-icon {
    font-weight: 900;
    box-shadow: none;
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,29,29)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
}


.btn-close {
    opacity: 1;
    background: transparent  url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='rgba(255,29,29)'><path d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/></svg>")center/1em auto no-repeat;

}

.btn-close:hover{
    opacity: 1;
}

.btn-close:focus{
    box-shadow: none;
}


.logo-img img {
    width: 200px;
    height: 70px;
}

.navbar-toggler {
    border: none;
    color: #fff;
    padding: 2px 6px;
}

.navbar-toggler-icon {
    /* background-color: #fff; */
    color: red;
    font-size: 30px;
}



.site-header{
    background-color: rgb(34, 34, 73);
}

.dropdown:hover .dropdown-menu{
    display: block;
}
.dropdown-menu{
    margin-top: 0;
}



.sitenav-item-link{
    color: #ffff;
    transition: all .7s ease;
}

.sitenav-item-link:hover {
    color: #ff1d1d;
}


.dropdown-item{
    white-space: break-spaces;
}


.dropdown-menu-offcansvas{
    background-color: #222249;
    color: #fff;
}

.dropdown-menu-offcansvas a{
    color:#fff;
}


.offcanvas.offcanvas-end{
    width: 300px;
    border-radius: 5px;
    z-index: 9999999999999;
}

.offcanvas{
    z-index: 9999999999999;
}

.offcanvas-header{
    width: 300px;
    background-color: #222249;
}

.offcanvas-body{
    background-color: #222249;
}



.nav-item {
    padding-top: 10px;
    padding-left: 20px;
}


.offcanvas-nav-item{
    font-size: 25px;
}


.nav-pills {
    align-items: center;
    margin-top: 30px;
}

.nav-link{
    color:white;
}

.nav-link:hover{
    color: #ff1d1d;
}

.nav-link:focus{
    color: #ff1d1d;
}

.nav-link:active{
    color: #ff1d1d;
}


/* background animation  */

@keyframes move {
    100% {
        transform: translate3d(0, 0, 1px) rotate(360deg);
    }
}

.background {
    position: fixed;
    width: 100vw;
    height: 100vh;
    top: 0;
    left: 0;
    background: #222249;
    overflow: hidden;
}

.background span {
    width: 1vmin;
    height: 1vmin;
    border-radius: 1vmin;
    backface-visibility: hidden;
    position: absolute;
    animation: move;
    animation-timing-function: linear;
    animation-iteration-count: infinite;
}


.background span:nth-child(0) {
    color: #ff1d1d;
    top: 11%;
    left: 50%;
    animation-duration: 15s;
    animation-delay: -5s;
    transform-origin: 17vw 8vh;
    box-shadow: 2vmin 0 0.8975126553806427vmin currentColor;
}
.background span:nth-child(1) {
    color: #ff1d1d;
    top: 32%;
    left: 96%;
    animation-duration: 14s;
    animation-delay: -8s;
    transform-origin: 11vw 1vh;
    box-shadow: -2vmin 0 1.0226263926861758vmin currentColor;
}
.background span:nth-child(2) {
    color: #ff1d1d;
    top: 63%;
    left: 6%;
    animation-duration: 14s;
    animation-delay: -7s;
    transform-origin: -1vw 19vh;
    box-shadow: -2vmin 0 1.1443808384153877vmin currentColor;
}
.background span:nth-child(3) {
    color: #ff1d1d;
    top: 40%;
    left: 53%;
    animation-duration: 7s;
    animation-delay: -2s;
    transform-origin: 20vw -24vh;
    box-shadow: -2vmin 0 0.9702767573208568vmin currentColor;
}
.background span:nth-child(4) {
    color: #ff1d1d;
    top: 50%;
    left: 13%;
    animation-duration: 12s;
    animation-delay: -10s;
    transform-origin: 25vw -6vh;
    box-shadow: -2vmin 0 0.8149502511512376vmin currentColor;
}
.background span:nth-child(5) {
    color: #ff1d1d;
    top: 54%;
    left: 71%;
    animation-duration: 14s;
    animation-delay: -9s;
    transform-origin: 22vw -4vh;
    box-shadow: -2vmin 0 0.9299062688611419vmin currentColor;
}
.background span:nth-child(6) {
    color: #ff1d1d;
    top: 44%;
    left: 59%;
    animation-duration: 13s;
    animation-delay: -7s;
    transform-origin: 21vw -20vh;
    box-shadow: 2vmin 0 0.5162019392338371vmin currentColor;
}
.background span:nth-child(7) {
    color: #ff1d1d;
    top: 63%;
    left: 44%;
    animation-duration: 10s;
    animation-delay: -1s;
    transform-origin: 20vw -20vh;
    box-shadow: 2vmin 0 1.1353772954584596vmin currentColor;
}
.background span:nth-child(8) {
    color: #ff1d1d;
    top: 80%;
    left: 55%;
    animation-duration: 6s;
    animation-delay: -9s;
    transform-origin: 1vw 15vh;
    box-shadow: 2vmin 0 0.6186175441902071vmin currentColor;
}
/* ... */

